@@ -10,7 +10,7 @@
 # See the file "license.terms" for information on usage and redistribution of
 # this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: mathop.test,v 1.11 2007/12/13 15:26:06 dgp Exp $
+# RCS: @(#) $Id: mathop.test,v 1.12 2008/03/30 03:23:39 kennykb Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest 2.1
@@ -1202,12 +1202,12 @@ test mathop-25.5  { exp operator } {TestOp **   1   5} 1
 test mathop-25.6  { exp operator } {TestOp **   5   1} 5
 test mathop-25.7  { exp operator } {TestOp ** 4 3 2 1} 262144
 test mathop-25.8  { exp operator } {TestOp ** 5.5   4} 915.0625
-test mathop-25.9  { exp operator } {TestOp **   6 3.5} 529.0897844411664
+test mathop-25.9  { exp operator } {TestOp **  16 3.5} 16384.0
 test mathop-25.10 { exp operator } {TestOp ** 3.5   0} 1.0
 test mathop-25.11 { exp operator } {TestOp ** 378   0} 1
 test mathop-25.12 { exp operator } {TestOp ** 7.8   1} 7.8
 test mathop-25.13 { exp operator } {TestOp ** 748   1} 748
-test mathop-25.14 { exp operator } {TestOp ** 6.3  -1} 0.15873015873015872
+test mathop-25.14 { exp operator } {TestOp ** 1.6  -1} 0.625
 test mathop-25.15 { exp operator } {TestOp ** 683  -1} 0
 test mathop-25.16 { exp operator } {TestOp **   1  -1} 1
 test mathop-25.17 { exp operator } {TestOp **  -1  -1} -1
